@@ -1,5 +1,11 @@
 2016-12-17 Even Rouault <even.rouault at spatialys.com>
 
+	* libtiff/tiffio.h, libtiff/tif_getimage.c: add TIFFReadRGBAStripExt()
+	and TIFFReadRGBATileExt() variants of the functions without ext, with
+	an extra argument to control the stop_on_error behaviour.
+
+2016-12-17 Even Rouault <even.rouault at spatialys.com>
+
 	* tools/tiff2ps.c: fix 2 heap-based buffer overflows (in PSDataBW
 	and PSDataColorContig). Reported by Agostino Sarubbo.
 	Fixes http://bugzilla.maptools.org/show_bug.cgi?id=2633 and
